--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,4 +3,8 @@
 export(convert_between_ensembl_and_symbols)
 export(convert_between_species)
 export(query_gene_ctd)
-export(run_ewce)
+export(reorder_within)
+export(run_ewce_controlled)
+export(scale_x_reordered)
+export(scale_y_reordered)
+export(summarise_specificity_plot)
