--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,3 +11,8 @@ License: What license it uses
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.0.2
+Imports: 
+    dplyr,
+    tidyr,
+    stringr,
+    ggplot2
