--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,24 +1,33 @@
 Package: MarkerGenes
-Title: What the Package Does (One Line, Title Case)
-Version: 0.0.0.9000
+Title: Gene specificity measures
+Version: 0.99.0
 Authors@R: 
     person(given = "Regina",
            family = "H. Reynolds",
            role = c("aut", "cre"),
            email = "regina.reynolds.16@ucl.ac.uk",
            comment = structure("0000-0001-6470-7919", .Names = "ORCID"))
-Description: Resource that contains a number of brain-relevant cell-type markers, including measures of cell-type specificity, in addition to a number of functions that allow users to query cell-type specificity and run expression-weighted enrichment (EWCE) with multiple gene lists.
+Description: Resource that contains measures of cell-type specificity, in addition to a number of functions that allow users to query cell-type specificity.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.1.1
+RoxygenNote: 7.1.2
 Imports: 
     dplyr,
     tidyr,
     stringr,
     ggplot2,
     magrittr,
-    EWCE,
-    forcats
+    forcats,
+    lifecycle,
+    tibble,
+    tidyselect
 Depends: 
     R (>= 3.5.0)
+Suggests: 
+    knitr,
+    EWCE,
+    rmarkdown,
+    BiocStyle,
+    sessioninfo
+VignetteBuilder: knitr
