--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,10 +5,12 @@ export(convert_between_ensembl_and_symbols)
 export(convert_between_species)
 export(query_gene_ctd)
 export(reorder_within)
-export(run_ewce_controlled)
 export(scale_x_reordered)
 export(scale_y_reordered)
 export(summarise_specificity_plot)
+importFrom(lifecycle,deprecate_warn)
 importFrom(magrittr,"%>%")
 importFrom(stats,median)
 importFrom(stats,setNames)
+importFrom(tibble,as_tibble)
+importFrom(tidyselect,everything)
