--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,9 +1,9 @@
 pandoc: 1.19.2.1
-pkgdown: 1.6.1
+pkgdown: 2.0.6
 pkgdown_sha: ~
 articles:
   MarkerGenes: MarkerGenes.html
-  articles/dataset_metadata: dataset_metadata.html
-  articles/query_gene_ctd_tutorial: query_gene_ctd_tutorial.html
-last_built: 2022-04-06T16:00Z
+  dataset_metadata: dataset_metadata.html
+  query_gene_ctd_tutorial: query_gene_ctd_tutorial.html
+last_built: 2022-10-05T08:32Z
 
